# CUDA-PBF-fluid-sim

./: AGENTS.md  CMakeLists.txt  PBF-X.sln  PBF-X.vcxproj  README.md  app_main.cpp  app_main.cpp.current.bak  import re.py  kernel.cu  stats.csv  temp_script.py  tmp_patch.py
engine/audio/: audio_reactive.cpp  audio_reactive.h
engine/core/: config.cpp  config.h  console.cpp  console.h  frame_graph.h  memory_pool.h  precision_mapping.cpp  precision_mapping.h  prof_nvtx.h  profiler.h
engine/gfx/: d3d12_device.cpp  d3d12_device.h  renderer.cpp  renderer.h
engine/gfx/d3d12_shaders/: points.hlsl  points_half.hlsl  points_speed.hlsl  thickness.hlsl
engine/interop/: cuda_d3d12_interop.h
engine/sim/: kernel_fallback.cpp  simulator.h
sim/: adaptive_precision.cu  audio_forces.cu  audio_forces.h  audio_frame.h  boundary.cu  boundary_globals.cu  boundary_half.cu  cell_compact.cu  cell_ranges.cu  cuda_grid_utils.cuh  cuda_vec_math.cuh  delta_globals.cu  device_buffers.cuh  device_buffers_kernels.cu  device_globals.cu  device_globals.cuh  device_pos_state.cu  device_pos_state.cuh  eimtter.cu  emit_params.cu  emit_params.h  emit_params_dirty.cu  emitter.cpp  emitter.h  graph_builder.cpp  graph_builder.h  grid_buffers.cuh  grid_stategy_impl.cpp  grid_strategy.h  grid_strategy_dense.h  grid_strategy_hashed.h  grid_system.h  hash_keys.cu  integrate.cu  integrate_pred_semi_implicit.cu  integrate_velocity_half.cu  integrate_velocity_mp.cu  kernel_dispatcher.cpp  kernel_dispatcher.h  logging.h  (+41 more)
unity_plugin/: NativeSimPlugin.cpp  SimInterop.h  SimStatsInterop.h
unity_plugin/Assets/: SimBridge.cs  VXFSimBridge.cs
unity_plugin/Assets/Scripts/: SimParamsBridge.cs
